lbcd (3.2.4-1) unstable; urgency=low

  * New upstream release.
    - Document behavior on systems with multiple interfaces.
  * Update to standards version 3.6.2 (no changes required).
  * Update maintainer address.

 --

lbcd (3.2.3-1) unstable; urgency=low

  * New upstream release adding the -b option to lbcd.

 -- Russ Allbery <rra@stanford.edu>  Thu, 24 Feb 2005 20:02:29 -0800

lbcd (3.2.2-1) unstable; urgency=low

  * New upstream release.
    - Improved documentation.

 -- Russ Allbery <rra@stanford.edu>  Tue, 16 Nov 2004 14:40:48 -0800

lbcd (3.2.1-1) unstable; urgency=low

  * New upstream release.
    - Fixes -R mode on Linux when responding to v2 queries.

 -- Russ Allbery <rra@stanford.edu>  Thu, 16 Sep 2004 16:12:51 -0700

lbcd (3.2.0-1) unstable; urgency=low

  * Initial release.

 -- Russ Allbery <rra@stanford.edu>  Thu, 19 Aug 2004 17:30:18 -0700
