@@ -1,32 +1,40 @@
-lbcd was originally written by Roland Schemers and was significantly
-updated by Larry Schwimmer.
+Debianized by Russ Allbery <rra@debian.org>                     2004-08-14
 
-The current maintainer is Russ Allbery <rra@stanford.edu>, who also
-maintains the Debian package.  The original source of this package may be
-downloaded from:
+It was downloaded from:
 
     <http://www.eyrie.org/~eagle/software/lbcd/>
 
+Upstream authors:
+
+    lbcd was originally written by Roland Schemers and was significantly
+    updated by Larry Schwimmer.  The current maintainer is Russ Allbery
+    <rra@stanford.edu>, who also maintains the Debian package.
+
+Debian packaging copyright:
+
+    All Debian packaging files and modifications for Debian are covered
+    under the same copyright and license as the upstream lbcd source.
+
 Copyright:
 
-  Copyright 1993, 1994, 1996, 1997, 1998, 2000, 2003, 2004 Board of
-  Trustees, Leland Stanford Jr.  University.
+    Copyright 1993, 1994, 1996, 1997, 1998, 2000, 2003, 2004, 2005 Board
+    of Trustees, Leland Stanford Jr.  University.
   
-  Permission is hereby granted, free of charge, to any person obtaining a
-  copy of this software and associated documentation files (the
-  "Software"), to deal in the Software without restriction, including
-  without limitation the rights to use, copy, modify, merge, publish,
-  distribute, sublicense, and/or sell copies of the Software, and to
-  permit persons to whom the Software is furnished to do so, subject to
-  the following conditions:
-  
-  The above copyright notice and this permission notice shall be included
-  in all copies or substantial portions of the Software.
-  
-  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
-  OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
-  IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-  CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
-  TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
-  SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+    Permission is hereby granted, free of charge, to any person obtaining
+    a copy of this software and associated documentation files (the
+    "Software"), to deal in the Software without restriction, including
+    without limitation the rights to use, copy, modify, merge, publish,
+    distribute, sublicense, and/or sell copies of the Software, and to
+    permit persons to whom the Software is furnished to do so, subject to
+    the following conditions:
+    
+    The above copyright notice and this permission notice shall be
+    included in all copies or substantial portions of the Software.
+    
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+    EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+    MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+    CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+    TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+    SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
